--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Der-Prozess-Roman_69327
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69327-h/images/frontcover.jpg
 creator:
   author:
     agent_name: Kafka, Franz
@@ -12,6 +15,8 @@ creator:
     - https://en.wikipedia.org/wiki/Franz_Kafka
     - https://de.wikipedia.org/wiki/Franz_Kafka
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69327#Der-Prozess-Roman
 gutenberg_issued: '2022-11-11'
 identifiers:
   gutenberg: '69327'
